Removing sprites until compile problem is resolved: http://stackoverflow.com/questions/8219779/sass-tries-to-use-the-compiled-css-as-the-sprite-filename-in-production

--- a/app/assets/stylesheets/scss/partials/_homepage.scss
+++ b/app/assets/stylesheets/scss/partials/_homepage.scss
@@ -3,7 +3,9 @@
 $homepage_images : sprite-map("sprites/homepage/*.png");
 
 @mixin homepage_image($image_name) {
-  background : sprite($homepage_images, $image_name) no-repeat !important;
+//  background : sprite($homepage_images, $image_name) no-repeat !important;
+	background : url(/assets/sprites/layout/#{$image_name}.png) no-repeat scroll 0 0 transparent !important;
+
 }
 
 #single_homepage {
